# rusty-xrp-addr

./: Cargo.toml  Makefile  README.md
.github/workflows/: app.yml
src/: main.rs
